--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,12 @@
   src: local('PixelMix'), url('./assets/pixelmix_bold.ttf') format('truetype');
 }
 
+button {
+  font-family: "PixelMix", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
 body {
   margin: 0;
   font-family: "PixelMix", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
