--- a/frontend/src/components/QuestProgress.css
+++ b/frontend/src/components/QuestProgress.css
@@ -7,3 +7,17 @@
     color: #66aa88;
     font-weight: bold;
 }
+
+.table td {
+    border: 1px solid #000000;
+    border-collapse: collapse;
+    padding: 2px;
+}
+
+.table {
+    border: 1px solid #000000;
+    border-collapse: collapse;
+    padding: 2px;
+    margin-left: auto;
+    margin-right: auto;
+}
