--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.entire-area {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
