--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,12 @@
   justify-content: center;
 }
 
+.pixi-area {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
