--- a/frontend/src/components/GameAreaComponent.css
+++ b/frontend/src/components/GameAreaComponent.css
@@ -1,14 +1,13 @@
-
 .game-area {
-    overflow-x: scroll;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    white-space: nowrap;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  white-space: nowrap;
 }
 
 .game-area::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 /**
       // see https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp
@@ -16,23 +15,29 @@
       // https://stackoverflow.com/questions/53158796/get-scroll-position-with-reactjs
 */
 
-
 .hex-block {
-    display: flex;
-    float: left;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  float: left;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .hex-block-row {
-    display: block;
-    float: left;
+  display: block;
+  float: left;
 }
 
 .hex-center {
-    border-style: solid;
-    border-width: 2px;
-    border-color: #444444;
-    border-radius: 50%;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #444444;
+  border-radius: 50%;
+}
+
+.hex-center:hover>.hover-only {
+  display: block;
+}
+.hover-only {
+  display: none;
 }
