--- a/frontend/src/components/QuestProgress.css
+++ b/frontend/src/components/QuestProgress.css
@@ -1,20 +1,20 @@
 .button {
-    font-size: x-large;
-    color: #FF0000
+  font-size: x-large;
+  color: #ff0000;
 }
 
 .good {
-    color: #66aa88;
-    font-weight: bold;
+  color: #66aa88;
+  font-weight: bold;
 }
 
 .table td {
-    border: 1px solid #000000;
-    padding: 6px;
+  border: 1px solid #000000;
+  padding: 6px;
 }
 
 .table {
-    border-collapse: collapse;
-    margin-left: auto;
-    margin-right: auto;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
 }
