--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -1,13 +1,13 @@
 .layout {
-  position:fixed;
-  right:0;
-  left:auto;
-  height:100%;
+  position: fixed;
+  right: 0;
+  left: auto;
+  height: 100%;
   width: fit-content;
   padding: 15px;
-  top:0;
-  flex:1 0 auto;
-  overflow-y:auto;
+  top: 0;
+  flex: 1 0 auto;
+  overflow-y: auto;
   flex-direction: column;
-  background-color: rgba(255,255,255,.70)
+  background-color: rgba(255, 255, 255, 0.7);
 }
