--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,6 +31,7 @@
 .entire-area {
   width: 100%;
   height: 100%;
+  background-color: #161616;
   position: absolute;
   display: flex;
   align-items: center;
