--- a/frontend/src/components/GameAreaComponent.css
+++ b/frontend/src/components/GameAreaComponent.css
@@ -41,3 +41,16 @@
 .hover-only {
   display: none;
 }
+
+.hex-center-lock-left {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #444444;
+}
+
+.hex-center-lock-right {
+  float: right;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #444444;
+}
