--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -7,7 +7,7 @@
 }
 
 .game-area::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
 /**
       // see https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp
