--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -16,8 +16,8 @@
 */
 
 .hex-block {
-  display: flex;
   float: left;
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -47,10 +47,26 @@
   border-style: solid;
   border-width: 2px;
   border-color: #444444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hex-center-lock-right {
   border-style: solid;
   border-width: 2px;
   border-color: #444444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tiny-text {
+  /* font is 12px x 16px but there's like 2px of "typography space/kern" at the right and top.
+  this fills it in symmetrically on the left and bottom.*/
+  padding-left: 2px;
+  padding-bottom: 2px;
+  max-width: 48px;
+  overflow: hidden;
+  cursor: default;
 }
