--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -11,3 +11,9 @@
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.7);
 }
+
+.close:hover {
+  font-weight: 700;
+  cursor: pointer;
+  color: inherit;
+}
