--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -34,6 +34,11 @@
   border-color: #444444;
   border-radius: 50%;
 }
+.empty-positioned {
+  height: 0;
+  width: 0;
+  position: relative;
+}
 
 .hex-center:hover ~ div .hover-only {
   display: block;
@@ -41,12 +46,27 @@
 .hover-only {
   display: none;
 }
+.node-tooltip {
+  border-style: solid;
+  width: max-content;
+  max-width: 224px;
+  padding: 3px;
+  background: rgba(255, 255, 255, 0.3);
+  position: absolute;
+  top: 16px;
+  left: -13px;
+}
 
 .hex-block:hover .hover-only-2 {
   display: block;
 }
 .hover-only-2 {
   display: none;
+}
+.question {
+  margin-top: -32px;
+  color: #888888;
+  cursor: pointer;
 }
 
 .hex-center-lock-left {
