--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -70,6 +70,10 @@
 }
 .hover-only-2 {
   display: none;
+  position: absolute;
+}
+.absolute-positioned {
+  position: absolute;
 }
 .question {
   margin-top: -32px;
