--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -1,3 +1,7 @@
+:root {
+  --border: 2px;
+}
+
 .game-area {
   overflow-x: scroll;
   overflow-y: scroll;
@@ -30,8 +34,9 @@
 
 .hex-center {
   border-style: solid;
-  border-width: 2px;
+  border-width: var(--border);
   border-color: #444444;
+  /* circle */
   border-radius: 50%;
 }
 .hex-center-text-wrapper {
@@ -39,8 +44,8 @@
   align-items: center;
   justify-content: center;
   /* otherwise the border width screws up centering here */
-  margin-top: -2px;
-  margin-left: -2px;
+  margin-top: calc(-1 * var(--border));
+  margin-left: calc(-1 * var(--border));
 }
 .empty-positioned {
   height: 0;
@@ -83,7 +88,7 @@
 
 .hex-center-lock-left {
   border-style: solid;
-  border-width: 2px;
+  border-width: var(--border);
   border-color: #444444;
   display: flex;
   justify-content: center;
@@ -92,7 +97,7 @@
 
 .hex-center-lock-right {
   border-style: solid;
-  border-width: 2px;
+  border-width: var(--border);
   border-color: #444444;
   display: flex;
   justify-content: center;
