add css variables in react use effect

--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -10,6 +10,9 @@
   --active-purple: none;
   --border-important-white: none;
   --border-unimportant-black: none;
+  --hex-center-radius: none;
+  --grid-width: none;
+  --grid-height: none;
 }
 
 .game-area {
@@ -38,6 +41,13 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: var(--grid-width);
+  height: var(--grid-height);
+}
+
+.hex-half-block {
+  width: calc(0.5 * var(--grid-width));
+  height: var(--grid-height);
 }
 
 .hex-block-row {
@@ -51,6 +61,8 @@
   border-width: var(--border);
   /* circle */
   border-radius: 50%;
+  width: calc(2 * var(--hex-center-radius));
+  height: calc(2 * var(--hex-center-radius));
 }
 .hex-center-text-wrapper {
   display: flex;
@@ -59,6 +71,8 @@
   /* otherwise the border width screws up centering here */
   margin-top: calc(-1 * var(--border));
   margin-left: calc(-1 * var(--border));
+  width: calc(2 * var(--hex-center-radius));
+  height: calc(2 * var(--hex-center-radius));
 }
 
 .empty-positioned {
@@ -101,12 +115,21 @@
   cursor: pointer;
 }
 
+.hex-center-lock {
+  margin-left: calc(-2 * var(--hex-center-radius));
+  width: calc(2 * var(--hex-center-radius));
+  height: calc(5 * var(--hex-center-radius));
+}
+
 .hex-center-lock-left {
   border-style: solid;
   border-width: var(--border);
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: var(--hex-center-radius);
+  width: calc(2 * var(--hex-center-radius));
+  height: calc(1 * var(--hex-center-radius));
 }
 
 .hex-center-lock-right {
@@ -115,6 +138,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: var(--hex-center-radius);
+  width: calc(2 * var(--hex-center-radius));
+  height: calc(1 * var(--hex-center-radius));
 }
 
 .tiny-text {
