--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -18,6 +18,7 @@
 .game-area {
   overflow-x: scroll;
   overflow-y: scroll;
+  background-color: var(--background-black);
 }
 
 .hidden-scrollbars {
