--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -19,6 +19,8 @@
   overflow-x: scroll;
   overflow-y: scroll;
   background-color: var(--background-black);
+  width: var(--app-size-width);
+  height: var(--app-size-height);
 }
 
 .hidden-scrollbars {
@@ -65,6 +67,21 @@
   width: calc(2 * var(--hex-center-radius));
   height: calc(2 * var(--hex-center-radius));
 }
+
+.node-allocated {
+  background-color: var(--deemphasized-black);
+}
+.node-unallocated {
+  background-color: var(--active-purple);
+}
+
+.border-unimportant {
+  border-color: var(--border-unimportant-black);
+}
+.border-important {
+  border-color: var(--border-important-white);
+}
+
 .hex-center-text-wrapper {
   display: flex;
   align-items: center;
