move css and stuff to another file

--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -43,9 +43,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: var(--grid-width);
-  height: var(--grid-height);
+  /* height: 100%; */
 }
 
 .hex-half-block {
@@ -57,124 +55,4 @@
   display: block;
   float: left;
   min-width: max-content;
-}
-
-.hex-center {
-  border-style: solid;
-  border-width: var(--border);
-  /* circle */
-  border-radius: 50%;
-  width: calc(2 * var(--hex-center-radius));
-  height: calc(2 * var(--hex-center-radius));
-}
-
-.node-allocated {
-  background-color: var(--deemphasized-black);
-}
-.node-unallocated {
-  background-color: var(--active-purple);
-}
-
-.border-unimportant {
-  border-color: var(--border-unimportant-black);
-}
-.border-important {
-  border-color: var(--border-important-white);
-}
-
-.hex-center-text-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* otherwise the border width screws up centering here */
-  margin-top: calc(-1 * var(--border));
-  margin-left: calc(-1 * var(--border));
-  width: calc(2 * var(--hex-center-radius));
-  height: calc(2 * var(--hex-center-radius));
-}
-
-.empty-positioned {
-  height: 0;
-  width: 0;
-  position: relative;
-}
-
-.hex-center:hover ~ div .hover-only {
-  display: block;
-}
-.hover-only {
-  display: none;
-}
-.node-tooltip {
-  border-style: solid;
-  width: max-content;
-  max-width: 224px;
-  padding: 4px;
-  /* background: rgba(255, 255, 255, 0.3); */
-  background: #666666;
-  position: absolute;
-  top: 20px;
-  left: -8px;
-}
-
-.hex-block:hover .hover-only-2 {
-  display: block;
-}
-.hover-only-2 {
-  display: none;
-  position: absolute;
-}
-.absolute-positioned {
-  position: absolute;
-}
-.question {
-  margin-top: -32px;
-  color: var(--readable-white);
-  cursor: pointer;
-}
-
-.hex-center-lock {
-  margin-left: calc(-2 * var(--hex-center-radius));
-  width: calc(2 * var(--hex-center-radius));
-  height: calc(5 * var(--hex-center-radius));
-}
-
-.hex-center-lock-left {
-  border-style: solid;
-  border-width: var(--border);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: var(--hex-center-radius);
-  width: calc(2 * var(--hex-center-radius));
-  height: calc(1 * var(--hex-center-radius));
-  background-color: var(--active-purple);
-  border-color: var(--border-unimportant-black);
-}
-
-.hex-center-lock-right {
-  border-style: solid;
-  border-width: var(--border);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: var(--hex-center-radius);
-  width: calc(2 * var(--hex-center-radius));
-  height: calc(1 * var(--hex-center-radius));
-  background-color: var(--active-purple);
-  border-color: var(--border-unimportant-black);
-}
-
-.tiny-text {
-  color: var(--readable-white);
-  font-size: small; /* this invalidates the below comment, potentially */
-
-  /* font is 12px x 16px but there's like 2px of "typography space/kern" at the right and top.
-  this fills it in symmetrically on the left and bottom.*/
-  /*
-  padding-left: 2px;
-  padding-bottom: 2px; */
-  max-width: 48px;
-  overflow: hidden;
-  cursor: default;
 }
