--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   overflow-anchor: none; /* https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-anchor helps with scroll anchoring */
 }
+
+/* Defaults from reacct */
 .App {
   text-align: center;
 }
@@ -32,10 +34,11 @@
   color: #61dafb;
 }
 
+/* Represents the play area (strictly bigger than game area), but not sidebars or bottom/top toolbars/hud */
 .entire-area {
   width: 100%;
   height: 100%;
-  background-color: #161616;
+  background-color: #000000;
   position: absolute;
   display: flex;
   align-items: center;
