--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -10,6 +10,7 @@
   border-radius: 50%;
   width: calc(2 * var(--hex-center-radius));
   height: calc(2 * var(--hex-center-radius));
+  z-index: 5;
 }
 
 .node-allocated {
@@ -80,12 +81,14 @@
 }
 
 .hex-center-lock {
+  z-index: 10;
   margin-left: calc(-2 * var(--hex-center-radius));
   width: calc(2 * var(--hex-center-radius));
   height: calc(5 * var(--hex-center-radius));
 }
 
 .hex-center-lock-left {
+  z-index: 10;
   border-style: solid;
   border-width: var(--border);
   display: flex;
@@ -99,6 +102,7 @@
 }
 
 .hex-center-lock-right {
+  z-index: 10;
   border-style: solid;
   border-width: var(--border);
   display: flex;
@@ -125,4 +129,26 @@
   ); /* circle is diameter 2R, so leave 25% margins */
   overflow: hidden;
   cursor: default;
+}
+
+.selection-cursor-wrapper {
+  z-index: 1;
+}
+
+.selection-cursor {
+  margin-left: -120px;
+  margin-top: -48px;
+  width: 16px;
+  height: 96px;
+  border-color: var(--border-important-white);
+  border-style: solid;
+  border-right-style: none;
+  border-width: 4px;
+  animation: blinker 1.5s ease-in infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0.25;
+  }
 }
