--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -1,9 +1,8 @@
 /* https://css-tricks.com/updating-a-css-variable-with-javascript/
    https://stackoverflow.com/questions/41725725/access-css-variable-from-javascript */
 :root {
-  --border: 2px;
-  --readable-white: #888888;
-
+  --border: 0px;
+  --text-readable-white: #000000;
   --app-size-width: 0px;
   --app-size-height: 0px;
   --background-black: #000000;
