--- a/frontend/src/components/Tabs.css
+++ b/frontend/src/components/Tabs.css
@@ -1,13 +1,22 @@
 .tab-label-container {
-  flex: content;
+  display: flex;
+  /* flex: content; */
   flex-direction: row;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
 }
 
 .tab-label {
   flex: 0 1 auto;
+  border-style: solid;
+  border-bottom-style: none;
+  border-width: 2px;
+  border-radius: 8px 8px 0px 0px;
+  padding: 4px;
+  margin-left: 2px;
 }
 .tab-label:hover {
-  font-weight: 700;
+  /* font-weight: 700; */
   cursor: pointer;
   color: inherit;
 }
