--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -4,13 +4,17 @@
   left: auto;
   height: 100%;
   width: fit-content;
-  padding: 15px;
+  padding: 8px;
   top: 0;
   flex: 1 0 auto;
   overflow-y: auto;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #888888;
   z-index: 100;
+}
+
+.close {
+  margin-bottom: 8px;
 }
 
 .close:hover {
