--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -11,7 +11,8 @@
   flex: 1 0 auto;
   overflow-y: auto;
   flex-direction: column;
-  background-color: #888888;
+  /* background-color: #888888; */
+  background-color: rgb(136, 136, 136, 0.8);
   z-index: 100;
 }
 
