--- a/frontend/src/components/Tabs.css
+++ b/frontend/src/components/Tabs.css
@@ -7,6 +7,12 @@
   margin-bottom: 8px;
 }
 
+.tab-label-container-padding {
+  width: 4px;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+}
+
 .tab-label {
   flex: 0 1 auto;
   border-style: solid;
