--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,10 +53,12 @@
 }
 
 .debug-overlay {
-  position: absolute;
+  position: relative;
   top: 1px;
   left: 1px;
   /* width: 100%; */
+  width: 0px;
+  height: 0px;
   z-index: 300;
 }
 
