profiling... with the .slice by debug button, identified that .hover-only is causing a 80ms slowdown

--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -48,6 +48,7 @@
 }
 
 /* used for node center tooltip */
+/* NOTE(Bowei): wtf this section is somehow terrible for performance */
 .hover-only {
   display: none;
 }
