swap to + selector for better perf

--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -52,10 +52,10 @@
 .hover-only {
   display: none;
 }
-.hex-center:hover ~ div .hover-only {
+.hex-center:hover + div .hover-only {
   display: block;
 }
-.hex-center-lock:hover ~ div .hover-only {
+.hex-center-lock:hover + div .hover-only {
   display: block;
 }
 
