sibling selector still bad for perf

--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -53,6 +53,7 @@
   display: none;
 }
 .hex-center:hover + div .hover-only {
+  /* + and ~ here are both slow */
   display: block;
 }
 .hex-center-lock:hover + div .hover-only {
