--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -74,7 +74,7 @@
 .node-tooltip {
   border-style: solid;
   width: max-content;
-  max-width: calc(var(--grid-width) - 2 * var(--hex-center-radius));
+  /* max-width: calc(var(--grid-width) - 2 * var(--hex-center-radius)); */
   padding: calc(2 * var(--border-width));
   background: var(--border-important-white);
   position: absolute;
