use native html details accordion

--- a/frontend/src/components/Sidebars/TabContent.css
+++ b/frontend/src/components/Sidebars/TabContent.css
@@ -1,3 +1,21 @@
 .tab-content-body {
   text-align: left;
 }
+
+.details {
+  margin-bottom: 4px;
+}
+
+.details summary {
+  cursor: pointer;
+}
+
+.details-body div {
+  margin-left: 8px;
+  margin-top: 4px;
+}
+
+.details-body .final-total {
+  text-align: right;
+  margin-right: 8px;
+}
