--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -27,6 +27,10 @@
   border-color: var(--border-important-white);
 }
 
+.node-available {
+  cursor: pointer;
+}
+
 .hex-center-text-wrapper {
   display: flex;
   align-items: center;
