--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -13,6 +13,10 @@
   z-index: 5;
 }
 
+.marked-square {
+  border-radius: 0%;
+}
+
 .node-allocated {
   background-color: var(--deemphasized-black);
 }
