track hover state and use it to bfs with backtracking

--- a/frontend/src/components/GameArea/GameAreaCell.css
+++ b/frontend/src/components/GameArea/GameAreaCell.css
@@ -27,6 +27,9 @@
 .border-important {
   border-color: var(--border-important-white);
 }
+.border-hoverpathed {
+  border-color: white;
+}
 
 .node-available {
   cursor: pointer;
