--- a/frontend/src/components/GameArea/CssVariables.css
+++ b/frontend/src/components/GameArea/CssVariables.css
@@ -8,6 +8,7 @@
   --background-black: #000000;
   --deemphasized-black: #000000;
   --active-purple: #000000;
+  --border-hovered-path: #000000;
   --border-important-white: #000000;
   --border-unimportant-black: #000000;
   --hex-center-radius: 0px;
